--- a/bm-wristbands.html
+++ b/bm-wristbands.html
@@ -1,46 +1,47 @@
 <html>
-<body style="background-color:#a09153;">
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Laurens-Suggest01--DaVinci-Code.png" />
+<!--<body style="background-color:#a09153;">-->
+<body align="center" style="background-color:#aaaaaa; text-align:center;">
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Laurens-Suggest01--DaVinci-Code.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Giuli-Suggest01--Green.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Giuli-Suggest01--Green.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Giuli-Suggest02--White&Gold.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Giuli-Suggest02--White&Gold.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Giuli-Suggest03--Red.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Giuli-Suggest03--Red.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest01--Burning-Men.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest01--Burning-Men.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest02--Fire-Ice.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest02--Fire-Ice.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest03--Pink-Lines.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest03--Pink-Lines.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest04--Straight-Lines-Pink-Red.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest04--Straight-Lines-Pink-Red.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest05--Straight-Lights.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest05--Straight-Lights.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest06--Straight-Lines-Blue.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest06--Straight-Lines-Blue.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest07--Purple-Waves.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest07--Purple-Waves.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest08--Straight-Lines-Yellow-Green.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest08--Straight-Lines-Yellow-Green.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest09--Red-Lines.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest09--Red-Lines.png" />
   </div>
-  <div style="padding-bottom:20px">
-  <img style="width:100%;" src="bm-wristbands/Rayo-Suggest10--Red-Lines-Fat.png" />
+  <div style="padding-bottom:35px">
+  <img style="width:90%;" src="bm-wristbands/Rayo-Suggest10--Red-Lines-Fat.png" />
   </div>
 </body>
 </html>
